style: 💄 fix image height on mobile for blog/portfolio (#115)

--- a/src/css/_blog.scss
+++ b/src/css/_blog.scss
@@ -110,6 +110,7 @@ section#blog {
     & > img {
       max-width: 100%;
       width: 100%;
+      height: auto;
     }
     & > .wrapper-content {
       margin-left: 1rem;
