--- a/src/css/_portfolio.scss
+++ b/src/css/_portfolio.scss
@@ -83,6 +83,7 @@ section#work{
     article{
       & > img{
         width:100%;
+        height: auto;
       }
     }
     article .wrapper-content{
